Changelog
=========

10.5-dev - (unreleased)
-----------------------

10.4 - (2014-08-27)
-------------------
* Upgrade step: within "Plone > Site setup > Add-ons" click on upgrade button
  available for eea.design
  [ichimdav refs #20302]
* Feature: added jquery-rememberstate and eea-rememberstate jquery plugins
  which saves the edit form data on submit and prompts the user to restore
  the data in case of a failure
  [ichimdav refs #20302]

10.3 - (2014-08-27)
-------------------
* Change: moved button style position to inside for region-content ul and
  removed border from tinymce image classes
  [ichimdav]

10.2 - (2014-08-12)
-------------------
* Change: subfolder folder_contents now display content excluded from navigation
  [ichimdav refs #20124]
* Change: fullscreen button help text now spans over entire button
  [ichimdav refs #20461]
* Change: added styling for noPageBreak on TinyMCE body
  [ichimdav 20461]
* Pre-upgrade step: The upgrade step for eea.design should be the first thing
  that needs to be done as soon as the instances are restarted to avoid
  having missing or broken styles.
  Use www8 instance to run upgrade from www/portal_setup/manage_upgrades
  [ichimdav refs #17336]
* Change: Add space after ul within #content-core
  [voineali refs #20457]
* Change: reorganized resources within skins folders
  [ichimdav refs #17336]
* Bug fix: fixed checkpermission import under folder_listing.pt
  [ghicaale]
* Feature: timeout dialog will appear after 15 minutes if the document is not saved.
  [ghicaale refs #20389]
* Change: removed state "closed" from the list of states marked with "draft" background
  [ghicaale refs #20490]
* Feature: added "draft" watermark for all non-final-published states
  [ghicaale refs #18538]
* Feature: blocked collective.deletepermission profile not to be installed
  (by mistake) via site setup
  [ghicaale refs #17478]
* Change: removed block_ldapuserfolder_profile.js as I registered new